--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -26,8 +26,8 @@
     <div id="SOHUCS"></div>
     <script type="text/javascript">
         (function () {
-            var appid = 'cyt37t1fy';
-            var conf = 'prod_03c24e6e9b38e5595a9aff85568b74de';
+            var appid = 'cyt4DdG0t'; 
+            var conf = 'prod_b4def428f120a1bd338d076e7a49aa1e'; 
             var width = window.innerWidth || document.documentElement.clientWidth;
             if (width < 960) {
                 window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>');
