--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>资讯资源分享</title>
+    <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
@@ -20,7 +21,7 @@
     {{template "layout/_nav.html" .}}
     <!-- navbar-->
     <!-- 正文 -->
-    <div class="container-fluid pt-1">
+    <div class="container pt-1">
         <div class="row">
             <!--正文-->
             <div class="col-md-9">
