--- a/static/css/my.css
+++ b/static/css/my.css
@@ -82,3 +82,8 @@ body > div > div.content-wrapper > section.content > div > div.media-body > ul {
 .series-card-details:hover {
     opacity:0
 }
+/*打分组件*/
+#raty {
+    position: absolute;
+    right: 15px;
+}
