--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -1,4 +1,8 @@
-<div class="card p-3">
+<div class="card p-3" id="comment">
+    <div id="raty"  ></div>
+
+
+
     <div class="jiathis_style_32x32">
         <a class="jiathis_button_tsina"></a>
         <a class="jiathis_button_qzone"></a>
@@ -6,10 +10,7 @@
         <a class="jiathis_button_weixin"></a>
         <a class="jiathis_button_cqq"></a>
         <a class="jiathis_button_qq"></a>
-        <a class="jiathis_button_twitter"></a>
-        <a class="jiathis_button_fb"></a>
         <a class="jiathis_button_linkedin"></a>
-        <a class="jiathis_button_googleplus"></a>
         <a class="jiathis_button_reddit"></a>
         <a class="jiathis_button_ujian"></a>
         <a href="//www.jiathis.com/share?uid=2088157" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
