--- a/views/layout/_audiobook.html
+++ b/views/layout/_audiobook.html
@@ -1,2 +1,2 @@
 <!--Footer-->
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" height="450"   src="//music.163.com/outchain/player?type=4&id=6907002&auto=1&height=430"></iframe>
+<iframe class="card mb-1" frameborder="no" border="0" marginwidth="0" marginheight="0" width="100%" height="450"   src="//music.163.com/outchain/player?type=4&id=6907002&auto=1&height=430"></iframe>
