--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -8,32 +8,31 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link">资讯 </a>
+          <a class="nav-link">美剧资讯</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link">短片 </a>
+          <a class="nav-link">美剧剧评</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">趣图</a>
+          <a class="nav-link">趣闻动图</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">英语</a>
+          <a class="nav-link">趣味视频</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">电子读物</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">趣图翻译</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">字幕分享</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">好文</a>
+          <a class="nav-link">留学资讯</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">趣玩</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link ">创意</a>
-        </li>
-
-        <li class="nav-item ">
-          <a class="nav-link ">字幕</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link ">名言</a>
+          <a class="nav-link ">名言锦句</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link ">有声读物</a>
