--- a/static/css/my.css
+++ b/static/css/my.css
@@ -94,3 +94,7 @@ body > div > div.content-wrapper > section.content > div > div.media-body > ul {
     width: 1350px;
   }
 }
+
+.show-cursor {
+cursor: pointer; cursor: hand;
+}
