--- a/views/layout/base_view.html
+++ b/views/layout/base_view.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +28,7 @@
     <div class="container pt-1">
         <div class="row">
             <!--正文-->
-            <div class="col-md-9">
+            <div class="col-md-7">
                 <!--面包屑-->
                 {{template "layout/_breadcrumb.html" .}}
                 <!--面包屑-->
@@ -39,28 +40,23 @@
             <!--正文-->
 
             <!-- 侧边栏-->
-            <div class="col-md-3 pl-sm-1 pl-xs-2">
-                <div class="card mb-1">
-                    {{template "layout/_audiobook.html" .}}
+            <div class="col-md-5 pl-sm-1 pl-xs-2">
+                {{template "layout/_audiobook.html" .}} {{range $key, $img := .Imgs}}
+                <div class="card p-2 mt-1">
+                    <img class="img-thunmbnail" src="{{$img.Src}}">
                 </div>
-                <div class="card">
+                {{end}}
 
+                <div class="card">
                     <ul class="list-group">
                         {{range $key, $val := .Quotes}}
                         <li class="list-group-item">{{$val.English}}</li>
                         {{end}}
                     </ul>
-
                 </div>
 
-                {{range $key, $img := .Imgs}}
-                    <div class="card p-2 mt-1">
-                        <img class="img-thunmbnail" src="{{$img.Src}}">
-                    </div>
-                {{end}}
             </div>
             <!-- 侧边栏-->
-
 
 
         </div>
