调整标题的布局

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -10,7 +10,7 @@
                 <div class="view overlay hm-white-slight show-cursor">
                         <img src="{{$value.CoverageUrl}}" alt="{{$value.Title}}" class="img-fluid"> 
                         <div class="series-card-details d-flex align-items-center">
-                                <h4 class="text-center">{{$value.Title}}</h4>
+                                <h4 class="text-center w-100">{{$value.Title}}</h4>
                         </div>
                 </div>
                 </a>
