添加注册登陆功能

--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{.Title}}</title>
-    <meta name="keywords" content="TRY美剧,trytv,看美剧学电影,轻松学习英语,{{.Keyword}}">
+    <meta name="keywords" content="TRY美剧|trytv|看美剧学电影|轻松学习英语|{{.Keyword}}">
     <meta name="description" content="{{.Description}}}">
     <meta name="_xsrf" content="{{.Xsrf}}" />
     <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
