--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -4,7 +4,7 @@
       aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-    <a class="navbar-brand" href="/"><img src="/static/img/logo56x56.png" width="35" height="35" alt="trytv.org logo"></a>
+    <a class="navbar-brand" href="/"><img src="/static/img/logo56x56.png"  width="35" height="35" alt="trytv.org logo"></a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -58,10 +58,10 @@
 
         {{if .User }}
             <li class="nav-item btn-group">
-              <a class="nav-link dropdown-toggle nav-link waves-effect waves-light p-0 ml-4" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ .User.WeiboAvatar}}" width="35" height="35"></a>
+              <a class="nav-link dropdown-toggle nav-link waves-effect waves-light p-0 ml-4" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="rounded-circle"  src="{{ .User.WeiboAvatar}}" width="35" height="35"></a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
                 <a class="dropdown-item">{{.User.Email}}</a>
-                <a class="dropdown-item">注销</a>
+                <a class="dropdown-item" href="/auth/logout">注销</a>
               </div>
             </li>
         {{else}}
