--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{.Title}}</title>
     <meta name="keywords" content="TRY美剧|trytv|看美剧学电影|轻松学习英语|{{.Keyword}}">
-    <meta name="description" content="{{.Description}}}">
+    <meta name="description" content="{{.Description}}">
     <meta name="_xsrf" content="{{.Xsrf}}" />
     <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
