--- a/views/tag/view.html
+++ b/views/tag/view.html
@@ -1,6 +1,6 @@
 <div class="card-columns">
 
-        {{range $index, $value := .Tag.Articles}}
+        {{range $index, $value := .Articles}}
 
         <!--Card-->
         <div class="card mb-1">
