--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -15,11 +15,17 @@
     <link href="//cdn.bootcss.com/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
     <link href="/static/css/my.css" rel="stylesheet">
     <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <script>
         $.ajaxSetup({
             headers: {
                 'X-Xsrftoken': $('meta[name=_xsrf]').attr('content')
             }
+        });
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8488823422266592",
+            enable_page_level_ads: true
         });
     </script>
 </head>
