--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -8,37 +8,37 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link">美剧资讯</a>
+          <a class="nav-link" href="/">最新资讯</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link">美剧剧评</a>
+          <a class="nav-link" href="/tag/1">美剧剧评</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">趣闻动图</a>
+          <a class="nav-link" href="/tag/2">趣闻动图</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">趣味视频</a>
+          <a class="nav-link" href="/tag/3">趣味视频</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">电子读物</a>
+          <a class="nav-link " href="/tag/4">电子读物</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">趣图翻译</a>
+          <a class="nav-link " href="/tag/5">趣图翻译</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">字幕分享</a>
+          <a class="nav-link " href="/tag/6">字幕分享</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">留学资讯</a>
+          <a class="nav-link" href="/tag/7">留学资讯</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">名言锦句</a>
+          <a class="nav-link " href="/tag/8">名言锦句</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">有声读物</a>
+          <a class="nav-link " href="/tag/9">有声读物</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link ">游戏CG</a>
+          <a class="nav-link " href="/tag/10">游戏CG</a>
         </li>
         <li class="nav-item btn-group">
           <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">短片</a>
