--- a/static/css/my.css
+++ b/static/css/my.css
@@ -98,3 +98,7 @@ body > div > div.content-wrapper > section.content > div > div.media-body > ul {
 .show-cursor {
 cursor: pointer; cursor: hand;
 }
+.tag-name-link{
+  position: absolute;
+  top:0;
+}
