--- a/views/tag/view.html
+++ b/views/tag/view.html
@@ -8,7 +8,7 @@
                 <!--Card image-->
                 <a href="/article/{{$value.ID}}" title="{{$value.Title}}">
                 <div class="view overlay hm-white-slight show-cursor">
-                        <img src="{{$value.CoverageUrl}}" alt="{{$value.Title}}" class="img-fluid"> 
+                        <img src="{{$value.CoverageURL}}" alt="{{$value.Title}}" class="img-fluid"> 
                         <div class="series-card-details d-flex align-items-center">
                                 <h4 class="text-center w-100">{{$value.Title}}</h4>
                         </div>
